<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.myfactory.FactoryActivity"
    android:background="@drawable/factory_cover"  >
	<RelativeLayout
	     android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="70sp">
     <TextView
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
         android:layout_marginTop="20sp"
         android:text="@string/welcome"
         android:textSize="36sp" />
     </RelativeLayout>
     <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom">

            <Button
                android:id="@+id/aboutme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:background="@drawable/buttonshape"                
                android:text="@string/aboutme"
                android:textColor="#FCFCFC"
                android:textSize="30sp"
                android:layout_marginRight="10sp"
                android:onClick="gotoAboutme" />

            <Button
                android:id="@+id/monitoring"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:layout_gravity="center"
                android:background="@drawable/buttonshape"
                android:text="@string/monitoring"
                android:textColor="#FCFCFC"
                android:textSize="30sp"
                android:layout_marginRight="5sp"
                android:onClick="gotoMonitoring"/>

            <Button
                android:id="@+id/repairing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:layout_gravity="center"
                android:background="@drawable/buttonshape"
                android:text="@string/repairing"
                android:textColor="#FCFCFC"
                android:textSize="30sp"
                android:layout_marginLeft="5sp"
                android:onClick="gotoRepairing"/>
            
            <Button
                android:id="@+id/show"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:layout_gravity="center"
                android:background="@drawable/buttonshape"
                android:text="@string/show"
                android:textColor="#FCFCFC"
                android:textSize="26sp"
                android:layout_marginLeft="10sp"
                android:onClick="gotoShow"/>

        </LinearLayout>
         
     </LinearLayout>

     
     

</RelativeLayout>
