<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.myfactory.LoginActivity"
    android:background="@drawable/background1">

     <RelativeLayout 
        android:id="@+id/usernameRel"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="120sp">
        
    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textStyle="bold"
        android:typeface="serif"
        android:textColor="#77FFEE"
        android:gravity="center" />
    <EditText
        android:id="@+id/username"
        android:textColor="#77FFEE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
	</LinearLayout>
	</RelativeLayout>
    
    <RelativeLayout 
        android:id="@+id/pwdRel"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/usernameRel">
    
		<LinearLayout
        	android:layout_height="wrap_content"
        	android:layout_width="match_parent"
        	android:orientation="horizontal"
        	android:layout_weight="1">
    	<TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/pwd"
        	android:textStyle="bold"
        	android:typeface="serif"
        	android:textColor="#77FFEE"
        	android:gravity="center" />
    	<EditText
    	    android:id="@+id/password"
    	    android:textColor="#77FFEE"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"/>
		</LinearLayout>			
	</RelativeLayout>
	
        <RelativeLayout 
        	android:id="@+id/buttonRel"
        	android:layout_height="wrap_content"
        	android:layout_width="match_parent"
        	android:layout_below="@id/pwdRel">
		
			<Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:background="@drawable/buttonshape"                
                android:text="@string/login"
                android:textColor="#FCFCFC"
                android:textSize="30sp"
                android:layout_marginTop="20sp"
                android:onClick="gotoCheck" />
	</RelativeLayout>
</RelativeLayout>
