<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.myfactory.ContactActivity"
    android:background="@drawable/background1">
	
    <RelativeLayout 
        android:id="@+id/tosomeone"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="120sp">
    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">   
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:textStyle="bold"
        android:typeface="serif"
        android:textColor="#77FFEE"
        android:gravity="center" />
    <EditText 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#77FFEE"
        android:layout_marginLeft="40sp"/>
    </LinearLayout>
	</RelativeLayout>
	
	
	<RelativeLayout
	    android:id="@+id/content" 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/tosomeone"
        android:layout_marginTop="20sp">
    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">   
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content"
        android:textStyle="bold"
        android:typeface="serif"
        android:layout_marginTop="-40sp"
        android:textColor="#77FFEE" />
    <EditText 
        android:layout_width="match_parent"
        android:layout_height="90sp"
        android:enabled="true"
        android:inputType="textMultiLine"
    	android:minLines="5"
    	android:maxLines="6"
    	android:scrollbars="vertical"
    	android:background="#CCCCFF"
    	android:textColor="#77FFEE" />
    </LinearLayout>
	</RelativeLayout>
	<RelativeLayout 
        	android:id="@+id/send"
        	android:layout_height="wrap_content"
        	android:layout_width="match_parent"
        	android:layout_below="@id/content">
		
			<Button
                android:id="@+id/sendButton"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginLeft="60sp"
                android:background="@drawable/buttonshape"                
                android:text="@string/send"
                android:textColor="#FCFCFC"
                android:textSize="30sp"
                android:layout_marginTop="20sp"
                android:onClick="gotoSend" />
	</RelativeLayout>
</RelativeLayout>
